--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,9 +70,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/screens/product_card/
+    - assets/screens/select_size/
+    - assets/screens/ratings_reviews/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
